[package]
name = "hs-order-cli"
version = "0.2.0"
edition = "2024"

[dependencies]

reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"
tabled = "0.20"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
once_cell = "1"
anyhow = "1.0"
chrono-tz = "0.10.4"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
